# jogo_da_velha

./: .gitignore  CMakeLists.txt  Makefile  genetic.cpp  genetic.h  main.cpp  neural_net.cpp  neural_net.h  play_the_game.cpp  readme.md  tictactoe.cpp  tictactoe.h
